@@ -7,9 +7,12 @@ import org.apache.http.client.methods.HttpGet;
 import com.android.suapp.suapp.server.database.objects.Message;
 import com.android.suapp.suapp.server.database.objects.Student;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 
 public abstract class MessageUtility {
 
@@ -26,11 +29,17 @@ public abstract class MessageUtility {
         params.append("body=").append(message.getBody()).append('&');
         params.append("token=").append(token);
 
-        HttpGet httpGet = new HttpGet();
-
-        httpGet.setURI(new URI(params.toString()));
-
-        return RequestUtility.apacheGET(httpGet, true).getAnswer();
+        URL url = new URL(params.toString());
+        System.err.println(params.toString());
+        url.openConnection();
+        BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream(), "utf-8"));
+        StringBuilder receivedString = new StringBuilder();
+        String temp;
+        while ((temp = br.readLine()) != null) {
+            System.out.println(temp);
+            receivedString.append(temp);
+        }
+        return receivedString.toString();
     }
 
 
@@ -41,12 +50,18 @@ public abstract class MessageUtility {
         params.append("my_id=").append(student.getId()).append('&');
         params.append("token=").append(token);
 
-        HttpGet httpGet = new HttpGet();
-
         System.out.println(params.toString());
 
-        httpGet.setURI(new URI(params.toString()));
-
-        return RequestUtility.apacheGET(httpGet, true).getAnswer();
+        URL url = new URL(params.toString());
+        System.err.println(params.toString());
+        url.openConnection();
+        BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream(), "utf-8"));
+        StringBuilder receivedString = new StringBuilder();
+        String temp;
+        while ((temp = br.readLine()) != null) {
+            System.out.println(temp);
+            receivedString.append(temp);
+        }
+        return receivedString.toString();
     }
 }
